* 2013-10-01 - thorben.betten@open-xchange.com

 - Change for bug 29081: Adapted category of error code 'UWA_WIDGET-0004' to USER_INPUT to display meaningful error message to the user
 - Fix for bug 28274: Support optional parameter "failOnError" to let client decide whether an error is supposed to be thrown in case of a
                      delete failure or not

* 2013-09-30 - thorben.betten@open-xchange.com

 - Fix for bug 29071: Extended preview cache to also keep scaled images to have computation once, but not on every new client request
 - Fix for bug 29032: Added client-specific hash to public session cookie

* 2013-09-28 - thorben.betten@open-xchange.com

 - Fix for bug 29002: Keep proper emoji characters on reply/forward operation
 - Fix for bug 28942: Prepare UTC-only properties to not specify a time zone

* 2013-09-25 - thorben.betten@open-xchange.com

 - Fix for bug 29044 : Several null guards to deal with absent messages

* 2013-09-24 - thorben.betten@open-xchange.com

 - Fix for bug 29000: Added null guard to check if stack trace has been null'ed in the meantime
 - Fix for bug 29020: Deal with possibly absent client identifiers in user attribute table
 - Fix for bug 28973: Pre-initialize request's time stamp
 - Fix for bug 28933: Orderly pass empty content to message part
 - Fix for bug 28900: Added null guards to arguments when retrieving a message's inline image
 - Fix for bug 26000: Completed description sentence
 - Fix for bug 25923: Avoid possible 'StringIndexOutOfBoundsException' when processing <base> tags
 - Fix for bug 29031: Handle temporary absent TimerService gracefully
 - Fix for bug 29009: Log proper resource name after successful update operation

* 2013-09-19 - thorben.betten@open-xchange.com

 - Fix for bug 28932: Deal with possible 'NumberFormatException' gracefully
 - Fix for bug 28935: Added null guard when checking which sender source to choose
 - Fix for bug 28949: Keep protocol/scheme part in deferred URL's redirect value
