@@ -3,6 +3,7 @@
  - Change for bug 29081: Adapted category of error code 'UWA_WIDGET-0004' to USER_INPUT to display meaningful error message to the user
  - Fix for bug 28274: Support optional parameter "failOnError" to let client decide whether an error is supposed to be thrown in case of a
                       delete failure or not
+ - Fix for bug 29092: Deal with possible 'FLD-0003' error when collecting file storage root folders
 
 * 2013-09-30 - thorben.betten@open-xchange.com
 
